--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,8 +15,8 @@ jobs:
       uses: actions/checkout@v4
 
     # Install jq dependency
-    - name: Install jq
-      run: brew install jq
+    - name: Ensure jq is available
+      run: jq --version || brew install jq
 
     # Run the script with mock tests
     - name: Test the script
